# simpler-fba

./: .blackboxrules  .env.example  .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  18_categories_config.json  AGENTS.md  Architectural_Summary_passive_extraction_workflow_latest-enhanced.txt  CHUNKING_BATCH_OPTIMIZATION_ANALYSIS.md  CLAUDE_STANDARDS.md  COMPREHENSIVE_HYBRID_ANALYSIS_REPORT.json  COMPREHENSIVE_SYSTEM_ANALYSIS_AND_FIXES_REPORT.md  CRITICAL_FIXES_IMPLEMENTATION_PLAN.json  CRITICAL_HYBRID_DEBUG_ANALYSIS.json  FINITE_MODE_IMPLEMENTATION_SUMMARY.md  GEMINI.md  INFINITE_MODE_EDGE_CASES_ANALYSIS.md  INFINITE_MODE_IMPLEMENTATION_SUMMARY.md  PARALLEL_AGENTS_IMPLEMENTATION_PLAN.md  VERSION_ANALYSIS_REPORT.md  acceptance_gate_report_20250628_202649.json  analyze_categories.py  apply_exhaustive_mode.py  apply_exhaustive_mode_fixed.py  categores-subcategories_list.csv  category_analysis_report_20250709_064156.json  claude.md  cleanup_authentication_test_data.py  cleanup_incomplete_keepa.ps1  codex_environment_setup.sh  codex_environment_setup_fixed.sh  codex_requirements.txt  comprehensive_hybrid_analysis.py  config_debug_results.json  critical_fixes_implementation_plan.py  critical_hybrid_debug_analysis.py  current summary issues.txt  debug_config_discrepancies.py  debug_linking_map_issue.py  debug_product_extraction.py  (+66 more)
.claude/: settings.local.json
DASHBOARD/: live_dashboard.txt  metrics_summary.json
OUTPUTS/: Technical_Report_Hybrid_Processing_Financial_Report_Issues.md  fba_profitable_finds_poundwholesale.co.uk_20250715_094111.json  fba_profitable_finds_poundwholesale.co.uk_20250715_124520.json  fba_profitable_finds_poundwholesale.co.uk_20250715_135611.json  fba_profitable_finds_poundwholesale.co.uk_20250715_140049.json  fba_profitable_finds_poundwholesale.co.uk_20250715_143915.json  fba_profitable_finds_poundwholesale.co.uk_20250715_144356.json  fba_profitable_finds_poundwholesale.co.uk_20250715_144825.json  fba_profitable_finds_poundwholesale.co.uk_20250715_145048.json  fba_profitable_finds_poundwholesale.co.uk_20250715_145325.json  fba_profitable_finds_poundwholesale.co.uk_20250715_155335.json  fba_profitable_finds_poundwholesale.co.uk_20250715_162137.json
archive/: ARCHIVED_FILES_EXPLANATION.md  CACHE_ANALYSIS_AND_IMPROVEMENTS.md  CACHE_INTEGRATION_GUIDE.md  CRITICAL_CACHE_INTEGRATION_ISSUE.md  NEW_SESSION_PROMPT.md  misplaced_passive_extraction_workflow_latest_20250617_030339.py
archive_new/: README_ARCHIVE.md
backup/: passive_extraction_workflow_before_ai_suggester_integration_20250707_130106.py  passive_extraction_workflow_latest_before_max_products_fix_20250701_183222.py
backup_20250701_172222/: configurable_supplier_scraper.py  supplier_guard.py  supplier_parser.py  supplier_script_generator.py  supplier_specific_directory_manager.py
browser_automation/: __init__.py  playwright_adapter.py  playwright_to_selenium_migrator.py  selenium_browser_manager.py
config/: CONSOLIDATED_SYSTEM_CONFIGURATION_ANALYSIS.md  __init__.py  comprehensive_toggle_analysis_report.md  comprehensive_toggle_analysis_report_corrected.md  experiment_results_20250715_225939.json  poundwholesale_categories.json  rigorous_toggle_test_results_20250716_010329.json  supplier_config_loader - Copy.py.bak  system-config-toggle-v2.md  system_config - Copy.json.bak 3  system_config.20250715_084457.bak  system_config.json  system_config.json.INFINTE  system_config.json.bak1  system_config.json.bak2  system_config.json.bak4  system_config.json.bak5  system_config.json.bak6  system_config.json.bak7  system_config.json.bak8  system_config.json.bak_cache_fix_20250716_030622  system_config.json.infinte1  system_config.json.inifinitnewst  system_config.json.old  system_config_exhaustive_mode.json  system_config_finite_mode.json  system_config_loader.py  test_cache_frequency_fix.json  toggle_effect_report.md
docs/: AGENTS.md  AGENTS_20250626_021657.md  API_KEY_MANAGEMENT_COMPARISON.md  CLAUDE_STANDARDS.md  COMPREHENSIVE_LANGGRAPH_WRAPPER_COMPLETION.md  CONFIG_AUDIT_REPORT.md  DEPRECATION_PLAN.md  DOCUMENTATION_UPDATE_SUMMARY.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  LANGGRAPH_INTEGRATION.md  LANGGRAPH_INTEGRATION.md.bak  LANGGRAPH_INTEGRATION_5july.md  LANGGRAPH_WRAPPER_ANALYSIS.md  NEW_CHAT_HANDOFF_PROMPT_COMPLETE.md  NEW_CHAT_HANDOFF_PROMPT_COMPLETE.md.bak  PULL_REQUEST_CHECKLIST.md  README.md (2).bak  README.md.bak  READMEBACKUP.MD  README_5july.md  README_LEGACY.md  README_NEW.md.bak  README_PHASE3.bak  README_VISION_BOOTSTRAP.md  REFACTORING_PROGRESS.md  REORGANIZATION_COMPLETION_REPORT.md  SYSTEM_ANALYSIS_REPORT_Amazon_FBA_Agent_System_v3.5.md  SYSTEM_CONFIG_TOGGLES.md  SYSTEM_DEEP_DIVE.md  SYSTEM_DEEP_DIVE_LEGACY.md  TEST_RUN_LOG.md  TROUBLESHOOTING.md  readme.md  readmesample.txt  selenium_migration.md
dormant/: llm_service.py  state_manager.py
langgraph_integration/: fba_workflow_graph.py
langraph_integration/: __init__.py  complete_fba_workflow.py  complete_tool_registry.py  critical_system_tools.py  enhanced_fba_tools.py  fba_workflow.py  medium_priority_tools.py  utility_tools.py  vision_enhanced_tools.py
monitoring/: auto_recovery_manager.py  comprehensive_system_monitor.py  kpi_tracker.py  run_monitoring.py
multi_agent_testing_session/: README-multiagent.md
poundwholesale-co-uk.archived_20250704_212701/: .supplier_ready  README.md  USAGE.md
scripts/: setup_unix.sh  setup_windows.ps1  smoke_test.py
session-logs/: currentstate.txt  cursor_integrate_cache_and_financial_ca.md  nextsteps.txt  othertestoutput.txt  testoutput.txt
single use/: analyze_categories.py  apply_finite_mode.py  cleanup_authentication_test_data.py  extract_categories_from_sitemap.py  extract_main_categories.py  extract_main_categories_fixed.py  find_actual_categories.py  find_categories_with_redirects.py  fix_duplicate_methods.py  run_authentication_tests.py  test_18_categories.py  test_authentication_real_system.py  test_cache_frequency_fix.py  verify_authentication_system.py  verify_category_selectors.py  vision_discovery_test.json
test_output/: test_linking_map.json
(+5630 files in other folders)
